# nv

./: CMakeLists.txt  LICENSE  README.md
cmake/: CMakePresets.json  FetchQt.cmake  Qt6Macros.cmake
docs/: ARCHITECTURE.md
resources/: nv.qrc
resources/translations/: nv_de.ts  nv_en.ts
src/app/: main.cpp
src/app/platform/: MenuBar.h  ShortcutsHelp.h
src/app/platform/linux/: MenuBar.cpp
src/app/platform/macos/: MenuBar.mm
src/app/platform/windows/: MenuBar.cpp
src/core/include/nv/: app_state.h  interfaces.h  note_model.h  note_store.h  result.h  search_index.h  storage.h  webdav_sync_manager.h
src/core/src/: app_state.cpp  note_model.cpp  note_store.cpp  search_index.cpp  storage.cpp  webdav_sync_manager.cpp
src/ui/include/nv/: application_controller.h  checkbox_widget.h  main_window.h  note_editor.h  note_list.h  search_field.h  webdav_config_dialog.h
src/ui/src/: application_controller.cpp  checkbox_widget.cpp  main_window.cpp  note_editor.cpp  note_list.cpp  search_field.cpp  webdav_config_dialog.cpp
